# pipeline-gen-ai

./: .gitignore  README.md  app.py  database.py  datacontract.py  pyproject.toml
dbt_vendas/: dbt_project.yml
dbt_vendas/models/: sources.yml
dbt_vendas/models/bronze/: bronze_vendas.sql
dbt_vendas/models/gold/: gold_vendas_diaria.sql  gold_vendas_semanal.sql  gold_vendas_vendedor.sql  schema.yml
dbt_vendas/models/silver/: silver_vendas.sql
docs/: index.md
